parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program function
Rule 2     program -> function
Rule 3     statements -> statement
Rule 4     statements -> BEGIN st END
Rule 5     st -> st statement
Rule 6     st -> empty
Rule 7     statement -> assign
Rule 8     statement -> print
Rule 9     statement -> if
Rule 10    statement -> if_else
Rule 11    statement -> while
Rule 12    statement -> BREAK
Rule 13    statement -> read
Rule 14    locals -> locals local
Rule 15    locals -> empty
Rule 16    local -> id COLON typename SEMI
Rule 17    local -> id COLON typename LBRACKET literal RBRACKET SEMI
Rule 18    function -> FUNC id LPAREN parameters RPAREN locals BEGIN statements END
Rule 19    parameters -> parameters COMMA parm_declaration
Rule 20    parameters -> parm_declaration
Rule 21    parameters -> empty
Rule 22    parm_declaration -> id COLON typename
Rule 23    parm_declaration -> id COLON typename LBRACKET literal RBRACKET
Rule 24    assign -> id ASSIGN expression SEMI
Rule 25    print -> PRINT LPAREN expression RPAREN SEMI
Rule 26    read -> READ LPAREN id RPAREN SEMI
Rule 27    expression -> PLUS expression
Rule 28    expression -> MINUS expression
Rule 29    expression -> LPAREN expression RPAREN
Rule 30    expression -> id LPAREN exprlist RPAREN
Rule 31    expression -> id LPAREN RPAREN
Rule 32    if -> IF cond THEN statements
Rule 33    if_else -> IF cond THEN statements ELSE statements
Rule 34    while -> WHILE cond statements
Rule 35    expression -> expression PLUS expression
Rule 36    expression -> expression MINUS expression
Rule 37    expression -> expression TIMES expression
Rule 38    expression -> expression DIVIDE expression
Rule 39    cond -> expression LT expression
Rule 40    cond -> expression GT expression
Rule 41    cond -> expression LE expression
Rule 42    cond -> expression GE expression
Rule 43    cond -> expression EQ expression
Rule 44    cond -> expression NE expression
Rule 45    cond -> cond LAND cond
Rule 46    cond -> cond LOR cond
Rule 47    cond -> LNOT cond
Rule 48    cond -> id
Rule 49    cond -> literal
Rule 50    expression -> id
Rule 51    expression -> literal
Rule 52    expression -> typename LPAREN id RPAREN
Rule 53    exprlist -> exprlist COMMA expression
Rule 54    exprlist -> expression
Rule 55    literal -> INTEGER
Rule 56    literal -> FLOAT
Rule 57    literal -> STRING
Rule 58    literal -> BOOLEAN
Rule 59    typename -> TYPENAME
Rule 60    id -> ID
Rule 61    id -> ID LBRACKET expression RBRACKET
Rule 62    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 24
BEGIN                : 4 18
BOOLEAN              : 58
BREAK                : 12
COLON                : 16 17 22 23
COMMA                : 19 53
DIVIDE               : 38
ELSE                 : 33
END                  : 4 18
EQ                   : 43
FLOAT                : 56
FUNC                 : 18
GE                   : 42
GT                   : 40
ID                   : 60 61
IF                   : 32 33
INTEGER              : 55
LAND                 : 45
LBRACKET             : 17 23 61
LE                   : 41
LNOT                 : 47
LOR                  : 46
LPAREN               : 18 25 26 29 30 31 52
LT                   : 39
MINUS                : 28 36
NE                   : 44
PLUS                 : 27 35
PRINT                : 25
RBRACKET             : 17 23 61
READ                 : 26
RPAREN               : 18 25 26 29 30 31 52
SEMI                 : 16 17 24 25 26
STRING               : 57
THEN                 : 32 33
TIMES                : 37
TYPENAME             : 59
WHILE                : 34
error                : 

Nonterminals, with rules where they appear

assign               : 7
cond                 : 32 33 34 45 45 46 46 47
empty                : 6 15 21
expression           : 24 25 27 28 29 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 53 54 61
exprlist             : 30 53
function             : 1 2
id                   : 16 17 18 22 23 24 26 30 31 48 50 52
if                   : 9
if_else              : 10
literal              : 17 23 49 51
local                : 14
locals               : 14 18
parameters           : 18 19
parm_declaration     : 19 20
print                : 8
program              : 1 0
read                 : 13
st                   : 4 5
statement            : 3 5
statements           : 18 32 33 33 34
typename             : 16 17 22 23 52
while                : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program function
    (2) program -> . function
    (18) function -> . FUNC id LPAREN parameters RPAREN locals BEGIN statements END

    FUNC            shift and go to state 2

    function                       shift and go to state 1
    program                        shift and go to state 3

state 1

    (2) program -> function .

    FUNC            reduce using rule 2 (program -> function .)
    $end            reduce using rule 2 (program -> function .)


state 2

    (18) function -> FUNC . id LPAREN parameters RPAREN locals BEGIN statements END
    (60) id -> . ID
    (61) id -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 4

    id                             shift and go to state 5

state 3

    (0) S' -> program .
    (1) program -> program . function
    (18) function -> . FUNC id LPAREN parameters RPAREN locals BEGIN statements END

    FUNC            shift and go to state 2

    function                       shift and go to state 6

state 4

    (60) id -> ID .
    (61) id -> ID . LBRACKET expression RBRACKET

    COLON           reduce using rule 60 (id -> ID .)
    LPAREN          reduce using rule 60 (id -> ID .)
    PLUS            reduce using rule 60 (id -> ID .)
    MINUS           reduce using rule 60 (id -> ID .)
    TIMES           reduce using rule 60 (id -> ID .)
    DIVIDE          reduce using rule 60 (id -> ID .)
    LAND            reduce using rule 60 (id -> ID .)
    LOR             reduce using rule 60 (id -> ID .)
    BEGIN           reduce using rule 60 (id -> ID .)
    BREAK           reduce using rule 60 (id -> ID .)
    PRINT           reduce using rule 60 (id -> ID .)
    IF              reduce using rule 60 (id -> ID .)
    WHILE           reduce using rule 60 (id -> ID .)
    READ            reduce using rule 60 (id -> ID .)
    ID              reduce using rule 60 (id -> ID .)
    THEN            reduce using rule 60 (id -> ID .)
    RPAREN          reduce using rule 60 (id -> ID .)
    COMMA           reduce using rule 60 (id -> ID .)
    ASSIGN          reduce using rule 60 (id -> ID .)
    SEMI            reduce using rule 60 (id -> ID .)
    RBRACKET        reduce using rule 60 (id -> ID .)
    LT              reduce using rule 60 (id -> ID .)
    GT              reduce using rule 60 (id -> ID .)
    LE              reduce using rule 60 (id -> ID .)
    GE              reduce using rule 60 (id -> ID .)
    EQ              reduce using rule 60 (id -> ID .)
    NE              reduce using rule 60 (id -> ID .)
    LBRACKET        shift and go to state 7


state 5

    (18) function -> FUNC id . LPAREN parameters RPAREN locals BEGIN statements END

    LPAREN          shift and go to state 8


state 6

    (1) program -> program function .

    FUNC            reduce using rule 1 (program -> program function .)
    $end            reduce using rule 1 (program -> program function .)


state 7

    (61) id -> ID LBRACKET . expression RBRACKET
    (27) expression -> . PLUS expression
    (28) expression -> . MINUS expression
    (29) expression -> . LPAREN expression RPAREN
    (30) expression -> . id LPAREN exprlist RPAREN
    (31) expression -> . id LPAREN RPAREN
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (50) expression -> . id
    (51) expression -> . literal
    (52) expression -> . typename LPAREN id RPAREN
    (60) id -> . ID
    (61) id -> . ID LBRACKET expression RBRACKET
    (55) literal -> . INTEGER
    (56) literal -> . FLOAT
    (57) literal -> . STRING
    (58) literal -> . BOOLEAN
    (59) typename -> . TYPENAME

    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    LPAREN          shift and go to state 16
    ID              shift and go to state 4
    INTEGER         shift and go to state 18
    FLOAT           shift and go to state 10
    STRING          shift and go to state 20
    BOOLEAN         shift and go to state 14
    TYPENAME        shift and go to state 9

    typename                       shift and go to state 12
    literal                        shift and go to state 13
    expression                     shift and go to state 19
    id                             shift and go to state 17

state 8

    (18) function -> FUNC id LPAREN . parameters RPAREN locals BEGIN statements END
    (19) parameters -> . parameters COMMA parm_declaration
    (20) parameters -> . parm_declaration
    (21) parameters -> . empty
    (22) parm_declaration -> . id COLON typename
    (23) parm_declaration -> . id COLON typename LBRACKET literal RBRACKET
    (62) empty -> .
    (60) id -> . ID
    (61) id -> . ID LBRACKET expression RBRACKET

    RPAREN          reduce using rule 62 (empty -> .)
    COMMA           reduce using rule 62 (empty -> .)
    ID              shift and go to state 4

    parm_declaration               shift and go to state 21
    parameters                     shift and go to state 22
    id                             shift and go to state 24
    empty                          shift and go to state 23

state 9

    (59) typename -> TYPENAME .

    SEMI            reduce using rule 59 (typename -> TYPENAME .)
    LBRACKET        reduce using rule 59 (typename -> TYPENAME .)
    LPAREN          reduce using rule 59 (typename -> TYPENAME .)
    RPAREN          reduce using rule 59 (typename -> TYPENAME .)
    COMMA           reduce using rule 59 (typename -> TYPENAME .)


state 10

    (56) literal -> FLOAT .

    PLUS            reduce using rule 56 (literal -> FLOAT .)
    MINUS           reduce using rule 56 (literal -> FLOAT .)
    TIMES           reduce using rule 56 (literal -> FLOAT .)
    DIVIDE          reduce using rule 56 (literal -> FLOAT .)
    RBRACKET        reduce using rule 56 (literal -> FLOAT .)
    RPAREN          reduce using rule 56 (literal -> FLOAT .)
    COMMA           reduce using rule 56 (literal -> FLOAT .)
    LT              reduce using rule 56 (literal -> FLOAT .)
    GT              reduce using rule 56 (literal -> FLOAT .)
    LE              reduce using rule 56 (literal -> FLOAT .)
    GE              reduce using rule 56 (literal -> FLOAT .)
    EQ              reduce using rule 56 (literal -> FLOAT .)
    NE              reduce using rule 56 (literal -> FLOAT .)
    SEMI            reduce using rule 56 (literal -> FLOAT .)
    LAND            reduce using rule 56 (literal -> FLOAT .)
    LOR             reduce using rule 56 (literal -> FLOAT .)
    BEGIN           reduce using rule 56 (literal -> FLOAT .)
    BREAK           reduce using rule 56 (literal -> FLOAT .)
    PRINT           reduce using rule 56 (literal -> FLOAT .)
    IF              reduce using rule 56 (literal -> FLOAT .)
    WHILE           reduce using rule 56 (literal -> FLOAT .)
    READ            reduce using rule 56 (literal -> FLOAT .)
    ID              reduce using rule 56 (literal -> FLOAT .)
    THEN            reduce using rule 56 (literal -> FLOAT .)


state 11

    (28) expression -> MINUS . expression
    (27) expression -> . PLUS expression
    (28) expression -> . MINUS expression
    (29) expression -> . LPAREN expression RPAREN
    (30) expression -> . id LPAREN exprlist RPAREN
    (31) expression -> . id LPAREN RPAREN
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (50) expression -> . id
    (51) expression -> . literal
    (52) expression -> . typename LPAREN id RPAREN
    (60) id -> . ID
    (61) id -> . ID LBRACKET expression RBRACKET
    (55) literal -> . INTEGER
    (56) literal -> . FLOAT
    (57) literal -> . STRING
    (58) literal -> . BOOLEAN
    (59) typename -> . TYPENAME

    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    LPAREN          shift and go to state 16
    ID              shift and go to state 4
    INTEGER         shift and go to state 18
    FLOAT           shift and go to state 10
    STRING          shift and go to state 20
    BOOLEAN         shift and go to state 14
    TYPENAME        shift and go to state 9

    typename                       shift and go to state 12
    literal                        shift and go to state 13
    expression                     shift and go to state 25
    id                             shift and go to state 17

state 12

    (52) expression -> typename . LPAREN id RPAREN

    LPAREN          shift and go to state 26


state 13

    (51) expression -> literal .

    RPAREN          reduce using rule 51 (expression -> literal .)
    PLUS            reduce using rule 51 (expression -> literal .)
    MINUS           reduce using rule 51 (expression -> literal .)
    TIMES           reduce using rule 51 (expression -> literal .)
    DIVIDE          reduce using rule 51 (expression -> literal .)
    LAND            reduce using rule 51 (expression -> literal .)
    LOR             reduce using rule 51 (expression -> literal .)
    BEGIN           reduce using rule 51 (expression -> literal .)
    BREAK           reduce using rule 51 (expression -> literal .)
    PRINT           reduce using rule 51 (expression -> literal .)
    IF              reduce using rule 51 (expression -> literal .)
    WHILE           reduce using rule 51 (expression -> literal .)
    READ            reduce using rule 51 (expression -> literal .)
    ID              reduce using rule 51 (expression -> literal .)
    THEN            reduce using rule 51 (expression -> literal .)
    RBRACKET        reduce using rule 51 (expression -> literal .)
    COMMA           reduce using rule 51 (expression -> literal .)
    LT              reduce using rule 51 (expression -> literal .)
    GT              reduce using rule 51 (expression -> literal .)
    LE              reduce using rule 51 (expression -> literal .)
    GE              reduce using rule 51 (expression -> literal .)
    EQ              reduce using rule 51 (expression -> literal .)
    NE              reduce using rule 51 (expression -> literal .)
    SEMI            reduce using rule 51 (expression -> literal .)


state 14

    (58) literal -> BOOLEAN .

    PLUS            reduce using rule 58 (literal -> BOOLEAN .)
    MINUS           reduce using rule 58 (literal -> BOOLEAN .)
    TIMES           reduce using rule 58 (literal -> BOOLEAN .)
    DIVIDE          reduce using rule 58 (literal -> BOOLEAN .)
    RBRACKET        reduce using rule 58 (literal -> BOOLEAN .)
    RPAREN          reduce using rule 58 (literal -> BOOLEAN .)
    COMMA           reduce using rule 58 (literal -> BOOLEAN .)
    LT              reduce using rule 58 (literal -> BOOLEAN .)
    GT              reduce using rule 58 (literal -> BOOLEAN .)
    LE              reduce using rule 58 (literal -> BOOLEAN .)
    GE              reduce using rule 58 (literal -> BOOLEAN .)
    EQ              reduce using rule 58 (literal -> BOOLEAN .)
    NE              reduce using rule 58 (literal -> BOOLEAN .)
    SEMI            reduce using rule 58 (literal -> BOOLEAN .)
    LAND            reduce using rule 58 (literal -> BOOLEAN .)
    LOR             reduce using rule 58 (literal -> BOOLEAN .)
    BEGIN           reduce using rule 58 (literal -> BOOLEAN .)
    BREAK           reduce using rule 58 (literal -> BOOLEAN .)
    PRINT           reduce using rule 58 (literal -> BOOLEAN .)
    IF              reduce using rule 58 (literal -> BOOLEAN .)
    WHILE           reduce using rule 58 (literal -> BOOLEAN .)
    READ            reduce using rule 58 (literal -> BOOLEAN .)
    ID              reduce using rule 58 (literal -> BOOLEAN .)
    THEN            reduce using rule 58 (literal -> BOOLEAN .)


state 15

    (27) expression -> PLUS . expression
    (27) expression -> . PLUS expression
    (28) expression -> . MINUS expression
    (29) expression -> . LPAREN expression RPAREN
    (30) expression -> . id LPAREN exprlist RPAREN
    (31) expression -> . id LPAREN RPAREN
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (50) expression -> . id
    (51) expression -> . literal
    (52) expression -> . typename LPAREN id RPAREN
    (60) id -> . ID
    (61) id -> . ID LBRACKET expression RBRACKET
    (55) literal -> . INTEGER
    (56) literal -> . FLOAT
    (57) literal -> . STRING
    (58) literal -> . BOOLEAN
    (59) typename -> . TYPENAME

    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    LPAREN          shift and go to state 16
    ID              shift and go to state 4
    INTEGER         shift and go to state 18
    FLOAT           shift and go to state 10
    STRING          shift and go to state 20
    BOOLEAN         shift and go to state 14
    TYPENAME        shift and go to state 9

    typename                       shift and go to state 12
    literal                        shift and go to state 13
    expression                     shift and go to state 27
    id                             shift and go to state 17

state 16

    (29) expression -> LPAREN . expression RPAREN
    (27) expression -> . PLUS expression
    (28) expression -> . MINUS expression
    (29) expression -> . LPAREN expression RPAREN
    (30) expression -> . id LPAREN exprlist RPAREN
    (31) expression -> . id LPAREN RPAREN
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (50) expression -> . id
    (51) expression -> . literal
    (52) expression -> . typename LPAREN id RPAREN
    (60) id -> . ID
    (61) id -> . ID LBRACKET expression RBRACKET
    (55) literal -> . INTEGER
    (56) literal -> . FLOAT
    (57) literal -> . STRING
    (58) literal -> . BOOLEAN
    (59) typename -> . TYPENAME

    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    LPAREN          shift and go to state 16
    ID              shift and go to state 4
    INTEGER         shift and go to state 18
    FLOAT           shift and go to state 10
    STRING          shift and go to state 20
    BOOLEAN         shift and go to state 14
    TYPENAME        shift and go to state 9

    typename                       shift and go to state 12
    literal                        shift and go to state 13
    expression                     shift and go to state 28
    id                             shift and go to state 17

state 17

    (30) expression -> id . LPAREN exprlist RPAREN
    (31) expression -> id . LPAREN RPAREN
    (50) expression -> id .

    LPAREN          shift and go to state 29
    RPAREN          reduce using rule 50 (expression -> id .)
    PLUS            reduce using rule 50 (expression -> id .)
    MINUS           reduce using rule 50 (expression -> id .)
    TIMES           reduce using rule 50 (expression -> id .)
    DIVIDE          reduce using rule 50 (expression -> id .)
    LAND            reduce using rule 50 (expression -> id .)
    LOR             reduce using rule 50 (expression -> id .)
    BEGIN           reduce using rule 50 (expression -> id .)
    BREAK           reduce using rule 50 (expression -> id .)
    PRINT           reduce using rule 50 (expression -> id .)
    IF              reduce using rule 50 (expression -> id .)
    WHILE           reduce using rule 50 (expression -> id .)
    READ            reduce using rule 50 (expression -> id .)
    ID              reduce using rule 50 (expression -> id .)
    THEN            reduce using rule 50 (expression -> id .)
    RBRACKET        reduce using rule 50 (expression -> id .)
    COMMA           reduce using rule 50 (expression -> id .)
    LT              reduce using rule 50 (expression -> id .)
    GT              reduce using rule 50 (expression -> id .)
    LE              reduce using rule 50 (expression -> id .)
    GE              reduce using rule 50 (expression -> id .)
    EQ              reduce using rule 50 (expression -> id .)
    NE              reduce using rule 50 (expression -> id .)
    SEMI            reduce using rule 50 (expression -> id .)


state 18

    (55) literal -> INTEGER .

    PLUS            reduce using rule 55 (literal -> INTEGER .)
    MINUS           reduce using rule 55 (literal -> INTEGER .)
    TIMES           reduce using rule 55 (literal -> INTEGER .)
    DIVIDE          reduce using rule 55 (literal -> INTEGER .)
    RBRACKET        reduce using rule 55 (literal -> INTEGER .)
    RPAREN          reduce using rule 55 (literal -> INTEGER .)
    COMMA           reduce using rule 55 (literal -> INTEGER .)
    LT              reduce using rule 55 (literal -> INTEGER .)
    GT              reduce using rule 55 (literal -> INTEGER .)
    LE              reduce using rule 55 (literal -> INTEGER .)
    GE              reduce using rule 55 (literal -> INTEGER .)
    EQ              reduce using rule 55 (literal -> INTEGER .)
    NE              reduce using rule 55 (literal -> INTEGER .)
    SEMI            reduce using rule 55 (literal -> INTEGER .)
    LAND            reduce using rule 55 (literal -> INTEGER .)
    LOR             reduce using rule 55 (literal -> INTEGER .)
    BEGIN           reduce using rule 55 (literal -> INTEGER .)
    BREAK           reduce using rule 55 (literal -> INTEGER .)
    PRINT           reduce using rule 55 (literal -> INTEGER .)
    IF              reduce using rule 55 (literal -> INTEGER .)
    WHILE           reduce using rule 55 (literal -> INTEGER .)
    READ            reduce using rule 55 (literal -> INTEGER .)
    ID              reduce using rule 55 (literal -> INTEGER .)
    THEN            reduce using rule 55 (literal -> INTEGER .)


state 19

    (61) id -> ID LBRACKET expression . RBRACKET
    (35) expression -> expression . PLUS expression
    (36) expression -> expression . MINUS expression
    (37) expression -> expression . TIMES expression
    (38) expression -> expression . DIVIDE expression

    RBRACKET        shift and go to state 33
    PLUS            shift and go to state 32
    MINUS           shift and go to state 31
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 30


state 20

    (57) literal -> STRING .

    PLUS            reduce using rule 57 (literal -> STRING .)
    MINUS           reduce using rule 57 (literal -> STRING .)
    TIMES           reduce using rule 57 (literal -> STRING .)
    DIVIDE          reduce using rule 57 (literal -> STRING .)
    RBRACKET        reduce using rule 57 (literal -> STRING .)
    RPAREN          reduce using rule 57 (literal -> STRING .)
    COMMA           reduce using rule 57 (literal -> STRING .)
    LT              reduce using rule 57 (literal -> STRING .)
    GT              reduce using rule 57 (literal -> STRING .)
    LE              reduce using rule 57 (literal -> STRING .)
    GE              reduce using rule 57 (literal -> STRING .)
    EQ              reduce using rule 57 (literal -> STRING .)
    NE              reduce using rule 57 (literal -> STRING .)
    SEMI            reduce using rule 57 (literal -> STRING .)
    LAND            reduce using rule 57 (literal -> STRING .)
    LOR             reduce using rule 57 (literal -> STRING .)
    BEGIN           reduce using rule 57 (literal -> STRING .)
    BREAK           reduce using rule 57 (literal -> STRING .)
    PRINT           reduce using rule 57 (literal -> STRING .)
    IF              reduce using rule 57 (literal -> STRING .)
    WHILE           reduce using rule 57 (literal -> STRING .)
    READ            reduce using rule 57 (literal -> STRING .)
    ID              reduce using rule 57 (literal -> STRING .)
    THEN            reduce using rule 57 (literal -> STRING .)


state 21

    (20) parameters -> parm_declaration .

    RPAREN          reduce using rule 20 (parameters -> parm_declaration .)
    COMMA           reduce using rule 20 (parameters -> parm_declaration .)


state 22

    (18) function -> FUNC id LPAREN parameters . RPAREN locals BEGIN statements END
    (19) parameters -> parameters . COMMA parm_declaration

    RPAREN          shift and go to state 35
    COMMA           shift and go to state 36


state 23

    (21) parameters -> empty .

    RPAREN          reduce using rule 21 (parameters -> empty .)
    COMMA           reduce using rule 21 (parameters -> empty .)


state 24

    (22) parm_declaration -> id . COLON typename
    (23) parm_declaration -> id . COLON typename LBRACKET literal RBRACKET

    COLON           shift and go to state 37


state 25

    (28) expression -> MINUS expression .
    (35) expression -> expression . PLUS expression
    (36) expression -> expression . MINUS expression
    (37) expression -> expression . TIMES expression
    (38) expression -> expression . DIVIDE expression

    LT              reduce using rule 28 (expression -> MINUS expression .)
    GT              reduce using rule 28 (expression -> MINUS expression .)
    LE              reduce using rule 28 (expression -> MINUS expression .)
    GE              reduce using rule 28 (expression -> MINUS expression .)
    EQ              reduce using rule 28 (expression -> MINUS expression .)
    NE              reduce using rule 28 (expression -> MINUS expression .)
    PLUS            reduce using rule 28 (expression -> MINUS expression .)
    MINUS           reduce using rule 28 (expression -> MINUS expression .)
    TIMES           reduce using rule 28 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 28 (expression -> MINUS expression .)
    RPAREN          reduce using rule 28 (expression -> MINUS expression .)
    LAND            reduce using rule 28 (expression -> MINUS expression .)
    LOR             reduce using rule 28 (expression -> MINUS expression .)
    BEGIN           reduce using rule 28 (expression -> MINUS expression .)
    BREAK           reduce using rule 28 (expression -> MINUS expression .)
    PRINT           reduce using rule 28 (expression -> MINUS expression .)
    IF              reduce using rule 28 (expression -> MINUS expression .)
    WHILE           reduce using rule 28 (expression -> MINUS expression .)
    READ            reduce using rule 28 (expression -> MINUS expression .)
    ID              reduce using rule 28 (expression -> MINUS expression .)
    THEN            reduce using rule 28 (expression -> MINUS expression .)
    RBRACKET        reduce using rule 28 (expression -> MINUS expression .)
    COMMA           reduce using rule 28 (expression -> MINUS expression .)
    SEMI            reduce using rule 28 (expression -> MINUS expression .)

  ! PLUS            [ shift and go to state 32 ]
  ! MINUS           [ shift and go to state 31 ]
  ! TIMES           [ shift and go to state 34 ]
  ! DIVIDE          [ shift and go to state 30 ]


state 26

    (52) expression -> typename LPAREN . id RPAREN
    (60) id -> . ID
    (61) id -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 4

    id                             shift and go to state 38

state 27

    (27) expression -> PLUS expression .
    (35) expression -> expression . PLUS expression
    (36) expression -> expression . MINUS expression
    (37) expression -> expression . TIMES expression
    (38) expression -> expression . DIVIDE expression

    LT              reduce using rule 27 (expression -> PLUS expression .)
    GT              reduce using rule 27 (expression -> PLUS expression .)
    LE              reduce using rule 27 (expression -> PLUS expression .)
    GE              reduce using rule 27 (expression -> PLUS expression .)
    EQ              reduce using rule 27 (expression -> PLUS expression .)
    NE              reduce using rule 27 (expression -> PLUS expression .)
    PLUS            reduce using rule 27 (expression -> PLUS expression .)
    MINUS           reduce using rule 27 (expression -> PLUS expression .)
    TIMES           reduce using rule 27 (expression -> PLUS expression .)
    DIVIDE          reduce using rule 27 (expression -> PLUS expression .)
    RPAREN          reduce using rule 27 (expression -> PLUS expression .)
    LAND            reduce using rule 27 (expression -> PLUS expression .)
    LOR             reduce using rule 27 (expression -> PLUS expression .)
    BEGIN           reduce using rule 27 (expression -> PLUS expression .)
    BREAK           reduce using rule 27 (expression -> PLUS expression .)
    PRINT           reduce using rule 27 (expression -> PLUS expression .)
    IF              reduce using rule 27 (expression -> PLUS expression .)
    WHILE           reduce using rule 27 (expression -> PLUS expression .)
    READ            reduce using rule 27 (expression -> PLUS expression .)
    ID              reduce using rule 27 (expression -> PLUS expression .)
    THEN            reduce using rule 27 (expression -> PLUS expression .)
    RBRACKET        reduce using rule 27 (expression -> PLUS expression .)
    COMMA           reduce using rule 27 (expression -> PLUS expression .)
    SEMI            reduce using rule 27 (expression -> PLUS expression .)

  ! PLUS            [ shift and go to state 32 ]
  ! MINUS           [ shift and go to state 31 ]
  ! TIMES           [ shift and go to state 34 ]
  ! DIVIDE          [ shift and go to state 30 ]


state 28

    (29) expression -> LPAREN expression . RPAREN
    (35) expression -> expression . PLUS expression
    (36) expression -> expression . MINUS expression
    (37) expression -> expression . TIMES expression
    (38) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 39
    PLUS            shift and go to state 32
    MINUS           shift and go to state 31
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 30


state 29

    (30) expression -> id LPAREN . exprlist RPAREN
    (31) expression -> id LPAREN . RPAREN
    (53) exprlist -> . exprlist COMMA expression
    (54) exprlist -> . expression
    (27) expression -> . PLUS expression
    (28) expression -> . MINUS expression
    (29) expression -> . LPAREN expression RPAREN
    (30) expression -> . id LPAREN exprlist RPAREN
    (31) expression -> . id LPAREN RPAREN
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (50) expression -> . id
    (51) expression -> . literal
    (52) expression -> . typename LPAREN id RPAREN
    (60) id -> . ID
    (61) id -> . ID LBRACKET expression RBRACKET
    (55) literal -> . INTEGER
    (56) literal -> . FLOAT
    (57) literal -> . STRING
    (58) literal -> . BOOLEAN
    (59) typename -> . TYPENAME

    RPAREN          shift and go to state 40
    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    LPAREN          shift and go to state 16
    ID              shift and go to state 4
    INTEGER         shift and go to state 18
    FLOAT           shift and go to state 10
    STRING          shift and go to state 20
    BOOLEAN         shift and go to state 14
    TYPENAME        shift and go to state 9

    typename                       shift and go to state 12
    literal                        shift and go to state 13
    expression                     shift and go to state 42
    id                             shift and go to state 17
    exprlist                       shift and go to state 41

state 30

    (38) expression -> expression DIVIDE . expression
    (27) expression -> . PLUS expression
    (28) expression -> . MINUS expression
    (29) expression -> . LPAREN expression RPAREN
    (30) expression -> . id LPAREN exprlist RPAREN
    (31) expression -> . id LPAREN RPAREN
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (50) expression -> . id
    (51) expression -> . literal
    (52) expression -> . typename LPAREN id RPAREN
    (60) id -> . ID
    (61) id -> . ID LBRACKET expression RBRACKET
    (55) literal -> . INTEGER
    (56) literal -> . FLOAT
    (57) literal -> . STRING
    (58) literal -> . BOOLEAN
    (59) typename -> . TYPENAME

    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    LPAREN          shift and go to state 16
    ID              shift and go to state 4
    INTEGER         shift and go to state 18
    FLOAT           shift and go to state 10
    STRING          shift and go to state 20
    BOOLEAN         shift and go to state 14
    TYPENAME        shift and go to state 9

    typename                       shift and go to state 12
    literal                        shift and go to state 13
    expression                     shift and go to state 43
    id                             shift and go to state 17

state 31

    (36) expression -> expression MINUS . expression
    (27) expression -> . PLUS expression
    (28) expression -> . MINUS expression
    (29) expression -> . LPAREN expression RPAREN
    (30) expression -> . id LPAREN exprlist RPAREN
    (31) expression -> . id LPAREN RPAREN
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (50) expression -> . id
    (51) expression -> . literal
    (52) expression -> . typename LPAREN id RPAREN
    (60) id -> . ID
    (61) id -> . ID LBRACKET expression RBRACKET
    (55) literal -> . INTEGER
    (56) literal -> . FLOAT
    (57) literal -> . STRING
    (58) literal -> . BOOLEAN
    (59) typename -> . TYPENAME

    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    LPAREN          shift and go to state 16
    ID              shift and go to state 4
    INTEGER         shift and go to state 18
    FLOAT           shift and go to state 10
    STRING          shift and go to state 20
    BOOLEAN         shift and go to state 14
    TYPENAME        shift and go to state 9

    typename                       shift and go to state 12
    literal                        shift and go to state 13
    expression                     shift and go to state 44
    id                             shift and go to state 17

state 32

    (35) expression -> expression PLUS . expression
    (27) expression -> . PLUS expression
    (28) expression -> . MINUS expression
    (29) expression -> . LPAREN expression RPAREN
    (30) expression -> . id LPAREN exprlist RPAREN
    (31) expression -> . id LPAREN RPAREN
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (50) expression -> . id
    (51) expression -> . literal
    (52) expression -> . typename LPAREN id RPAREN
    (60) id -> . ID
    (61) id -> . ID LBRACKET expression RBRACKET
    (55) literal -> . INTEGER
    (56) literal -> . FLOAT
    (57) literal -> . STRING
    (58) literal -> . BOOLEAN
    (59) typename -> . TYPENAME

    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    LPAREN          shift and go to state 16
    ID              shift and go to state 4
    INTEGER         shift and go to state 18
    FLOAT           shift and go to state 10
    STRING          shift and go to state 20
    BOOLEAN         shift and go to state 14
    TYPENAME        shift and go to state 9
